# rust-orchestrator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml
.github/workflows/: ci.yml
console/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
console/src/: App.tsx  api.ts  styles.css  types.ts
console/src/components/: CodeBlock.tsx  CodeEditor.tsx  CodeMirrorEditor.tsx  DagGraph.tsx  LogStream.tsx  Markdown.tsx  MiniChart.tsx  ResultView.tsx  WorkflowBuilder.tsx  ui.tsx
console/src/pages/: Dashboard.tsx  Functions.tsx  Ingestion.tsx  NotebookEditor.tsx  Notebooks.tsx  RunDetail.tsx  Runs.tsx  WorkflowDetail.tsx  Workflows.tsx
crates/: CLAUDE.md
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: dag.rs  event.rs  lib.rs  model.rs
crates/cortex-executor/: CLAUDE.md  Cargo.toml
crates/cortex-executor/shims/: cortex.mjs  cortex.py  worker.mjs  worker.py
crates/cortex-executor/src/: isolation.rs  lib.rs  pool.rs
crates/cortex-server/: Cargo.toml
crates/cortex-server/src/: connectors.rs  data.rs  domain.rs  error.rs  main.rs  mcp.rs  orchestrator.rs  routes.rs  scheduler.rs  state.rs
crates/cortex-store/: Cargo.toml
crates/cortex-store/src/: lib.rs
docs/: architecture.md  development.md
examples/: python_pipeline.py  typescript_pipeline.mts
scripts/: dev.sh
sdks/: CLAUDE.md
sdks/python/: README.md  pyproject.toml
sdks/python/cortex_sdk/: __init__.py  client.py  flow.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: index.ts
site/: docs.html  index.html
