[package]
name = "cortex-core"
description = "Core domain model for the Cortex orchestration platform: workflows, DAGs, runs, events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
