[package]
name = "cortex-store"
description = "SQLite-backed persistence for Cortex workflows, runs, functions, and datasets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cortex-core = { path = "../cortex-core" }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
