[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-sdk"
version = "0.1.0"
description = "Python bindings for the Cortex orchestration platform: define flows and tasks in Python, deploy and stream them against a Cortex server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
include = ["cortex_sdk*"]
